--- a/css/demo.css
+++ b/css/demo.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-size: 16px;
 }
+
 *,
 *:after,
 *::before {
@@ -19,180 +20,203 @@ body {
     font-style: normal;
 
 }
+
 * {
     font-family: 'limestoneregular';
 }
-h1{
-  text-align: center;
-}
-h3.grid-item{
-    padding-left: 1em
 
-}
-.indhold img {
+h1 {
     text-align: center;
-    margin: 0 auto;
-    width: 90%;
 }
+
+h3.grid-item {
+    padding-left: 1em
+}
+
 div.splashHeader img {
-    max-width: 100%;
-    max-height: 300px;
+    width: 100%;
+    max-height: 400px;
     overflow: hidden;
 }
+
 /* kalklandet style*/
 img.kalklandImg1 {
     padding-top: 2em;
 }
-.links{
-  color: #796d65;
+
+.links {
+    color: #796d65;
 }
-h2.grid-item{
+
+h2.grid-item {
     display: none;
 }
-		 /* flag */
-    div.flag_inner {
+
+/* flag */
+div.flag_inner {
     position: absolute;
     right: 0% !important;
     top: 23%;
     display: flex;
     flex-direction: column;
-      float: right;
+    float: right;
 }
-    img.myFlag {
+
+img.myFlag {
     max-width: 40px;
     padding-bottom: 10px;
-      display: block;
+    display: block;
 }
+
 /* styles for UNDERSIDER */
 
 .page-nav {
-  width: 100%;
-  background-color: #42c1c0;
-  font-size: 18px;
-  margin-top: -4px;
+    width: 100%;
+    background-color: #42c1c0;
+    font-size: 18px;
+    margin-top: -4px;
 }
 
 /* Hide Hamburger */
-.page-nav label, #hamburger {
-  display: none;
+.page-nav label,
+#hamburger {
+    display: none;
 }
-label2{
-  display: none;
-      }
-      span{
-  display: none;
-      }
+
+label2 {
+    display: none;
+}
+
+span {
+    display: none;
+}
+
 /* Menu Items */
-.page-nav p{
-  display: none;
-      }
+.page-nav p {
+    display: none;
+}
+
 .page-nav ul {
     list-style-type: none;
     margin: 0;
 }
+
 .page-nav ul li {
     display: inline-block;
     padding-bottom: 10px;
 }
+
 .page-nav ul li a {
     text-decoration: none;
     padding: inherit;
     color: #796d65;
     width: inherit;
-  padding: 10px;
+    padding: 10px;
 }
+
 .page-nav l:hover {
     display: inline-block;
 
 }
-     .page-nav a:hover {
+
+.page-nav a:hover {
 
     background-color: #00b5b2;
     color: #FFF;
     padding-top: 22px;
 }
+
 .page-nav a:fokus {
     background-color: #00b5b2;
     color: #FFF;
     padding-top: 22px;
 }
+
 .page-nav a:hover-within {
     background-color: #00b5b2;
     color: #FFF;
     padding-top: 22px;
 }
 
-  .page-nav a.active {
+.page-nav a.active {
 
     background-color: #fff;
     color: #ec7f44;
     cursor: default;
     padding: 10px;
-        padding-top: 10px;
-        padding-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-top: 21px;
     padding-bottom: 11px;
 
 }
 
 /* [ON SMALL SCREENS] */
-@media screen and (max-width: 768px){
-  /* Show Hamburger */
-  .page-nav label {
-    display: inline-block;
-    color: #fff;
-    background: #e67c42;
-    font-style: normal;
-    font-size: 1.2em;
-    padding: 10px;
-  }
-  label2 {
-    display: block;
-    float: right;
-    padding-top: 15px;
-    padding-right: 12px;
-    color: #ec7f44;
-}
-span {
-    display: block;
-    float: right;
-    padding-top: 15px;
-    padding-right: 12px;
-    color: #ec7f44;
-}
+@media screen and (max-width: 768px) {
 
-  /* Break down menu items into vertical */
-  .page-nav ul li {
-    display: block;
-    padding: inherit;
-  }
-  .page-nav ul li {
+    /* Show Hamburger */
+    .page-nav label {
+        display: inline-block;
+        color: #fff;
+        background: #e67c42;
+        font-style: normal;
+        font-size: 1.2em;
+        padding: 10px;
+    }
 
-    border-top: 1px solid #b3aa87;
-    width: 100%;
-    padding: 11px;
+    label2 {
+        display: block;
+        float: right;
+        padding-top: 15px;
+        padding-right: 12px;
+        color: #ec7f44;
+    }
 
-}
-.page-nav ul li a:hover {
+    span {
+        display: block;
+        float: right;
+        padding-top: 15px;
+        padding-right: 12px;
+        color: #ec7f44;
+    }
 
-    display: inline-block;
-    padding: inherit;
+    /* Break down menu items into vertical */
+    .page-nav ul li {
+        display: block;
+        padding: inherit;
+    }
 
-}
-  /* Toggle show/hide menu on checkbox click */
-  .page-nav ul {
-    display: none;
-  }
-  .page-nav input:checked ~ ul {
-    display: block;
-  }
-  /* li p mobile menu */
-  .page-nav a.active {
-    background-color: #42c1c0;
-    color: #FFF;
-    cursor: default;
-    padding: inherit;
-}
+    .page-nav ul li {
+
+        border-top: 1px solid #b3aa87;
+        width: 100%;
+        padding: 11px;
+
+    }
+
+    .page-nav ul li a:hover {
+
+        display: inline-block;
+        padding: inherit;
+
+    }
+
+    /* Toggle show/hide menu on checkbox click */
+    .page-nav ul {
+        display: none;
+    }
+
+    .page-nav input:checked ~ ul {
+        display: block;
+    }
+
+    /* li p mobile menu */
+    .page-nav a.active {
+        background-color: #42c1c0;
+        color: #FFF;
+        cursor: default;
+        padding: inherit;
+    }
 }
 
 /* Front navigation */
@@ -224,6 +248,7 @@ img.mobileLogo p {
     width: 100%;
     height: auto;
 }
+
 .banner_inner {
     position: absolute;
     left: 75%;
@@ -300,7 +325,7 @@ div#splash.demo-banner {
     display: block;
     font-size: 55%;
     color: #74818e;
-   /* padding: 0 0 0.6em 0.1em;*/
+    /* padding: 0 0 0.6em 0.1em;*/
 }
 
 /* header animation h1*/
@@ -325,43 +350,49 @@ h1.animate {
         opacity: 1
     }
 }
+
 /* footer */
 
- #footer {
-        font-size: 14px;
-        width: 100%;
-        margin: auto;
+#footer {
+    font-size: 14px;
+    width: 100%;
+    margin: auto;
 
     background-color: #ec7f44;
     color: #FFF;
-    }
-    #wrapper {
-    background-color: #ec7f44;
-    width: 100%;
-    overflow:hidden;
 }
 
-    .footerFloat li{
-        list-style: none;
+#wrapper {
+    background-color: #ec7f44;
+    width: 100%;
+    overflow: hidden;
+}
+
+.footerFloat li {
+    list-style: none;
     text-decoration-line: underline;
     text-align: left;
-    }
-    .footerFloat h4{
-        text-align: center;
-      color: #796d65;
-font-size: 24px;
-    }
-    .footerFloat ul{
-        text-align: center;
-    }
-    .footer-copyright{
-        overflow: hidden;
-background-color: #b4a983;
-text-align: center;
-color: #FFF;
-font-size: 12px;
-    }
-    .flex-center {
+}
+
+.footerFloat h4 {
+    text-align: center;
+    color: #796d65;
+    font-size: 24px;
+}
+
+.footerFloat ul {
+    text-align: center;
+}
+
+.footer-copyright {
+    overflow: hidden;
+    background-color: #b4a983;
+    text-align: center;
+    color: #FFF;
+    font-size: 12px;
+}
+
+.flex-center {
     display: flex;
     -webkit-box-pack: center;
     justify-content: center;
@@ -369,17 +400,22 @@ font-size: 12px;
     align-items: center;
     height: 100%;
     padding-bottom: 10px;
-      padding-top: 2em;
+    padding-top: 2em;
 }
-.fb-ic, .ins-ic, .pin-ic{
+
+.fb-ic,
+.ins-ic,
+.pin-ic {
     font-size: 10px;
-  padding-right: 2em;
+    padding-right: 2em;
 }
+
 div.footerFloat {
     width: 25%;
     float: left;
-    }
-iframe#kort{
+}
+
+iframe#kort {
     max-width: 220px;
     height: auto;
     text-align: center;
@@ -392,10 +428,12 @@ iframe#kort{
         float: none;
         margin: 0 auto;
     }
+
     div.footerFloat {
-    width: 50%;
+        width: 50%;
+    }
 }
-}
+
 @media all and (max-width: 500px) {
     .breakFooter {
 
@@ -403,21 +441,25 @@ iframe#kort{
         float: none;
         margin: 0 auto;
     }
-    .footerFloat ul{
+
+    .footerFloat ul {
         text-align: left;
     }
+
     div.footerFloat {
-    width: 100%;
-    text-align: center;
+        width: 100%;
+        text-align: center;
+    }
+
+    iframe#kort {
+        width: 100%;
+    }
+
+    div#kort {
+        width: 100%;
+    }
 }
 
-iframe#kort{
-    width: 100%;
-}
-div#kort{
-    width: 100%;
-}
-}
 /* media query */
 @media screen and (max-width: 1025px) {
     .container > header {
@@ -498,12 +540,12 @@ div#kort{
 }
 
 @media screen and (min-width: 650px) {
-        .navi li {
+    .navi li {
         width: 105px;
         border-bottom: none;
         height: 40px;
         line-height: 40px;
-      font-size: 16px;
+        font-size: 16px;
     }
 
     .navi li {
@@ -511,6 +553,7 @@ div#kort{
         margin-right: -4px;
     }
 }
+
 @media (max-width: 600px) {
 
 
