--- a/css/grid.css
+++ b/css/grid.css
@@ -13,6 +13,11 @@
     display: grid;
 }
 
+.kalk img {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
 .indhold img {
     text-align: center;
     max-width: 100%;
@@ -36,19 +41,15 @@
     padding-left: 1em;
 }
 
-.kalk img {
-    width: 300px;
-    top: 1em;
-    margin-top: 1em;
-}
-
-
 main {
     max-width: 100%;
     margin-top: 0px;
 }
 
 /* Frontpage*/
+div.frontGrid-item {
+    padding-left: 2em;
+}
 
 section.indhold {
     display: grid;
@@ -107,14 +108,15 @@ div.frontGrid-item:nth-child(9) {
 }
 
 /* grid style */
-.frontGrid-item img {
+img.frontGrid-item {
     text-align: center;
     margin: 0 auto;
 }
 
-img.frontGrid-item {
+.frontGrid-item img {
     text-align: center;
     margin: 0 auto;
+    max-width: 500px;
 }
 
 div.frontGrid-item {
@@ -308,6 +310,7 @@ article.kalk {
 .grid-item:nth-child(4) {
     grid-column: 3/ 6;
     grid-row: 2 / 5;
+    max-width: 80%;
 }
 
 .grid-item:nth-child(5) {
@@ -333,11 +336,111 @@ img.grid-item {
     margin: 0 auto;
 }
 
+@media screen and (max-width: 809px) {
+
+
+    article.kalk {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding-top: 30px;
+
+    }
+
+    .grid-item {
+        width: 50%;
+        height: auto;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .grid-item:nth-child(1) {
+        grid-column: 1 / 7;
+        grid-row: 1 / 2;
+    }
+
+    .grid-item:nth-child(2) {
+        grid-column: 1 / 3;
+        grid-row: span 1;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .grid-item:nth-child(3) {
+        grid-column: 1 / 3;
+        grid-row: span 1;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .grid-item:nth-child(4) {
+        grid-column: 3 / 7;
+        grid-row: span 2;
+    }
+
+    .grid-item:nth-child(5) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+        width: 100%;
+        text-align: center;
+        padding-top: 1em;
+        border-left: none;
+    }
+
+    p.grid-item:nth-child(5) {
+        text-align: left;
+    }
+}
+
+@media all and (max-width: 575px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-top: 10px;
+
+    }
+
+    article.kalk {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-top: 0px;
+    }
+
+    .grid-item {
+        width: 100%;
+        height: auto;
+        grid-template-rows: 1fr;
+    }
+
+    .grid-item:nth-child(1) {
+        grid-column: 1 / 7;
+        grid-row: 1 / 2;
+    }
+
+    .grid-item:nth-child(2) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+    }
+
+    .grid-item:nth-child(3) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+    }
+
+    .grid-item:nth-child(4) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+    }
+
+    .grid-item:nth-child(5) {
+        grid-column: 1 / 7;
+        grid-row: span 1;
+    }
+}
+
 /* pagesGrid */
-div.splashHeader img {
+.frontGrid-item img {
+    text-align: center;
+    margin: 0 auto;
     max-width: 100%;
-    max-height: 400px;
-    overflow: hidden;
 }
 
 .pagesGrid-item-container {
@@ -394,10 +497,8 @@ img.pagesGrid-item {
     margin: 0 auto;
 }
 
+/* pagesGrid max 809px*/
 @media screen and (max-width: 809px) {
-
-
-    /* pagesGrid max 809px*/
 
     section.indhold {
         display: grid;
