--- a/css/demo.css
+++ b/css/demo.css
@@ -45,7 +45,7 @@ img.kalklandImg1 {
 }
 
 .links {
-    color: #796d65;
+    color: #ec7f44;
 }
 
 h2.grid-item {
@@ -164,14 +164,6 @@ span {
         padding: 10px;
     }
 
-    label2 {
-        display: block;
-        float: right;
-        padding-top: 15px;
-        padding-right: 12px;
-        color: #ec7f44;
-    }
-
     span {
         display: block;
         float: right;
@@ -194,13 +186,6 @@ span {
 
     }
 
-    .page-nav ul li a:hover {
-
-        display: inline-block;
-        padding: inherit;
-
-    }
-
     /* Toggle show/hide menu on checkbox click */
     .page-nav ul {
         display: none;
@@ -215,7 +200,15 @@ span {
         background-color: #42c1c0;
         color: #FFF;
         cursor: default;
-        padding: inherit;
+        background-color: #8cc63e;
+        color: #ec7f44;
+        padding-top: 10px;
+    }
+
+    .page-nav ul li a:hover {
+        display: inline-block;
+        padding: 0px;
+        margin: 0;
     }
 }
 
@@ -428,9 +421,10 @@ iframe#kort {
         float: none;
         margin: 0 auto;
     }
-  div.footerFloat {
-    width: 100%;
-}
+
+    div.footerFloat {
+        width: 100%;
+    }
 }
 
 @media all and (max-width: 500px) {
@@ -476,14 +470,15 @@ iframe#kort {
 
     #mobileSplash {
         display: none;
-  }
+    }
 }
 
 @media screen and (max-width: 809px) {
-	div.splashHeader img {
-      max-height: 300px;
-    padding: 10px 0 0;
-}
+    div.splashHeader img {
+        max-height: 300px;
+        padding: 10px 0 0;
+    }
+
     main {
         margin-top: 60px;
     }
@@ -495,7 +490,8 @@ iframe#kort {
     a#mobileSplash {
         display: block;
     }
-   div.footerFloat {
+
+    div.footerFloat {
         width: 50%;
     }
 
@@ -584,10 +580,11 @@ iframe#kort {
         -o-transform: translate(-50%, -50%);
         transform: translate(-50%, -50%);
     }
-  .footerFloat ul {
-    text-align: center;
-    padding-left: 20%;
-}
+
+    .footerFloat ul {
+        text-align: center;
+        padding-left: 20%;
+    }
 }
 
 @media screen and (min-width: 421px) {
